--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,28 +4,24 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
 </head>
 <body>
-<div id="show"></div>
+<div style="width:800px; margin-left:auto; margin-right:auto; background-color:cadetblue; color:White; height:400px">
 <form id="log">
 用户名:<input type="text" name="username" id="username"/>
 密码:<input type="password" name="username" id="password"/>
 
 </form>
 <button id="login">登录</button>
+<button onclick="userpage()">查询垃圾</button>
+</div>
 </body>
-
 <script>
-// window.onload=function () {
-//   $.ajax(
-//       {
-//           type:'get',
-//           datatype:'text',
-//           url:'index'
-//       }
-//   )
-// };
+    function userpage() {
+        window.location.href="http://localhost:8080/test/user.html"
+    }
+</script>
+<script>
 $(function () {
     $("#login").click(
       function () {
@@ -52,29 +48,6 @@ $(function () {
       }
     );
 });
-//    function f() {
-//        var username=document.getElementById("username").value;
-//        var password=document.getElementById("password").value;
-//
-//        var formData=new FormData();
-//        formData.append("username",username);
-//        formData.append("password",password);
-//        var xhr=new XMLHttpRequest();
-//        var url = "/test/LoginServlet";
-//        xhr.open("post",url,true);
-//
-//        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-//        xhr.onreadystatechange=function () {
-//            if(xhr.readyState===4&&xhr.readyState===200){
-//                alert(xhr.responseText);
-//            }
-//            else {
-//                document.getElementById("show").innerHTML="error";
-//            }
-//        };
-//        xhr.send(formData);
-//        // xhr.send(data);
-//    }
 </script>
 
 </html>
