--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -19,6 +19,7 @@
 <script>
     function userpage() {
         window.location.href="http://localhost:8080/test/user.html"
+        // window.location.href="http://129.211.1.53:8080/test/user.html"
     }
 </script>
 <script>
@@ -39,6 +40,7 @@ $(function () {
                   }
                   else if(msg==="1"){
                       window.location.replace("http://localhost:8080/test/index.html");
+                      // window.location.replace("http://129.211.1.53:8080/test/index.html");
                   }
                   else {
                       alert("error");
