--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
 function userpage() {
-    window.location.href="http://localhost:8080/test/user.html";
+     window.location.href="http://localhost:8080/test/user.html";
+    // window.location.href="http://129.211.1.53:8080/test/user.html";
 }
+$(document).ready(function () {
+    $("#add").click(function (event) {event.preventDefault();
+        $.ajax({
+            type:'POST',
+            dataType:'text',
+            url:'AddServlet',
+            data:"gname="+encodeURI($('#gname').val())+"&variety="+encodeURI($('#variety').val())+"&describe="+encodeURI($('#describe').val())+"&handle="+encodeURI($('#handle').val()),
+            contentType:'application/x-www-form-urlencoded',
+            success:function (msg) {
+                if(msg==="1"){
+                    alert("发送成功");
+                }
+                if(msg==="2"){
+                    alert("已存在此垃圾");
+                }
+                if(msg==="3"){
+                    alert("请输入完整信息");
+                }
+
+            }
+        })
+    });
+    // $("#search").click(function (event) {event.preventDefault();
+    //     $.ajax({
+    //         type:'POST',
+    //         dataType:'text',
+    //         url:'SearchServlet',
+    //         data:"searchname="+encodeURI($('#searchname').val()),
+    //         contentType:'application/x-www-form-urlencoded',
+    //         success:function (msg) {
+    //             if (msg==="1"){
+    //                 alert("此垃圾不存在可以添加");
+    //             }else if (msg==="2"){
+    //                 aler("此垃圾已存在无需添加");
+    //             }else if(msg==="3"){
+    //                 alert("请输入要查询的垃圾");
+    //             }
+    //         }
+    //     })
+    // })
+});
+
 </script>
 <body>
 <div>
@@ -18,28 +62,33 @@ function userpage() {
 </div>
 <h1>hello</h1>
 <div class="">
-    <input type="text" /><button>查询</button>
+<form>
+    <input type="text" id="searchname" name="searchname"/><button id="search">查询</button>
+</form>
+
+    <form>
+
     <table class="table table-hover table-bordered">
 
         <tr>
             <td>是否有查找的垃圾</td>
         </tr>
         <tr>
-            <th><h5>名称</h5></th>
+            <th><h5>名称</h5><input type="text" id="gname" name="gname"/></th>
         </tr>
         <tr>
-            <th><h5>种类</h5></th>
+            <th><h5>种类</h5><input type="text" id="variety" name="variety"/></th>
         </tr>
         <tr>
-            <th><h5>描述</h5></th>
+            <th><h5>描述</h5><input type="text" id="describe" name="describe"/></th>
         </tr>
         <tr>
-            <th><h5>处理方式</h5></th>
+            <th><h5>处理方式</h5><input type="text" id="handle" name="handle"/></th>
         </tr>
+
     </table>
-    <form>
-        <button>修改</button>
-        <button>添加</button>
+        <button id="add">添加</button>
+
     </form>
 </div>
 </body>
