--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -23,10 +23,10 @@
     }
 </script>
 <script>
+    // 登录操作
 $(function () {
     $("#login").click(
       function () {
-
           $.ajax({
               type:'POST',
               dataType:'text',
